--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<body>
-  <h1>Hello World</h1>
-</body>
+<!doctype HTML>
+<html>
+  <body>
+    <h1>Hello World</h1>
+
+    <h2>Welcome to this website</h2>
+  </body>
