--- a/index.html
+++ b/index.html
@@ -2,3 +2,8 @@
   <h1>Hello!!</h1>
 
 </body>
+
+
+
+<img src="pickle.jpg" width="200px">
+ <p> This is an image of a PICKLE. Pickles are good for your soul. Eat them all. Blah Blah Blah Blah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah Blah </p>
