--- a/about.html
+++ b/about.html
@@ -1,49 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
 
-/* Create two unequal columns that floats next to each other */
-.column {
-  float: left;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
-
-.left {
-  width: 25%;
-}
-
-.right {
-  width: 75%;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-</style>
-</head>
 <body>
-
-<h2>Two Unequal Columns</h2>
-
-<div class="row">
-  <div class="column left" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
-  </div>
-  <div class="column right" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
-  </div>
+  <div class="promo-1">
+    <div class="promo-image-1">
+<img src="1471450151-lunchboxes.jpg" alt="Mother and Daughter" width="500" height="600">
 </div>
+<div class="promo-headline">
+  <h2>We are the greatest at school lunches</h2>
+  <p>
+    "Simply choose the number of recipes you want to try each week and the servings you need. We’ll then deliver the ingredients and inspiration to your door, leaving you to cook and enjoy a range of meals including traditional classics with a twist and tasty dishes from around the world."
+</p>
+<a class="home-button" href="/home"> Go back to home>
+  </a>
+  </div>
+  </div>
 
-</body>
+
 </html>
