--- a/index.html
+++ b/index.html
@@ -1,7 +1,120 @@
-<!doctype HTML>
-<html>
-  <body>
-    <h1>Hello World</h1>
+<!DOCTYPE html>
+<head>
+  <title>Recipe App</title>
 
-    <h2>Welcome to this website</h2>
-  </body>
+  <!--favicon to change-->
+  <link rel="shortcut icon" type="image/png" href="./assets/food.png" style="width:16px">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
+</head>
+
+<body>
+  <div id="main-nav">
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="/index.html">Home</a>
+      </li>
+      <!--logo to change-->
+      <li class="logo">
+        <img class="nav-brand" src="./placeholderlogo.png" style="width:250px">
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about.html">About</a>
+      </li>
+    </ul>
+  </div>
+
+  <!--Carousel-->
+    <div id="maincarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#maincarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#maincarousel" data-slide-to="1"></li>
+        <li data-target="#maincarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/image1.jpg" class="d-block w-100" style="opacity: 0.7" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="headline-caption">First slide label</h5>
+            <p class="text-caption">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            <!--Subscribe button-->
+            <div>
+              <button class="button">Subscribe</button>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/image2.jpg" class="d-block w-100" style="opacity: 0.7" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="headline-caption">Second slide label</h5>
+            <p class="text-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div>
+            <button class="button">Subscribe</button>
+          </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/image3.jpg" class="d-block w-100" style="opacity: 0.7" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="headline-caption">Third slide label</h5>
+            <p class="text-caption">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          <div>
+            <button class="button">Subscribe</button>
+          </div>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#maincarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#maincarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+  <!--Columns with cards-->
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-body">
+            <img src="./assets/fork.svg" class="card-icon">
+            <h4 class="card-headline">Healthy & nutritional</h4>
+            <p class="card-content">Meals are prepared according to daily nutritional requirements</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-body">
+            <img src="./assets/diet.svg" class="card-icon">
+            <h4 class="card-headline">Balanced meal</h4>
+            <p class="card-content">Meals are prepared according to daily nutritional requirements</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-body">
+            <img src="./assets/shipped.svg" class="card-icon">
+            <h4 class="card-headline">Evening deliveries</h4>
+            <p class="card-content">Meals are prepared according to daily nutritional requirements</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+  <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+  <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+
+</body>
