Jess' updates including responsive design
Lot's of changes. Only to the About page (I hope!)
Made it responsive :)

--- a/about.html
+++ b/about.html
@@ -1,23 +1,123 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <title> About page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+
+<link rel="shortcut icon" type="image/png" href="./assets/food.png" style="width:16px">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="styles.css">
+
 <head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body>
-  <div class="promo-1">
-    <div class="promo-image-1">
-<img src="1471450151-lunchboxes.jpg" alt="Mother and Daughter" width="500" height="600">
+
+  <div id="main-nav">
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="/index.html">Home</a>
+      </li>
+      <!--logo to change-->
+      <li class="logo">
+        <img class="nav-brand" src="MunchBox.png" style="width:150px">
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about.html">About</a>
+      </li>
+    </ul>
+  </div>
+
+
+<img class="Healthfood" src="Healthfoods.png" alt="Healthy lunches"/>
+  <div class="text-block">
+    <h2>Munch Box is the solution to healthy lunchboxes, insert title stuff</h2>
+    <p>Text here about idea etc.. (css to add)</p>
+    <h3> Sign up to claim 15% off your first order<h3>
+    <br>
+  <button class="button button1"><strong>Click Here</strong></button>
 </div>
-<div class="promo-headline">
-  <h2>We are the greatest at school lunches</h2>
-  <p>
-    "Simply choose the number of recipes you want to try each week and the servings you need. We’ll then deliver the ingredients and inspiration to your door, leaving you to cook and enjoy a range of meals including traditional classics with a twist and tasty dishes from around the world."
-</p>
-<a class="home-button" href="/home"> Go back to home>
-  </a>
-  </div>
-  </div>
+
+<br>
+<br>
+<br>
+
+<div class="hidden-text-block">
+  <h2>Munch Box is the solution to healthy lunchboxes, insert title stuff</h2>
+  <p>Text here about idea etc.. (css to add)</p>
+  <h3> Sign up to claim 15% off your first order<h3>
+  <br>
+<button class="button button1"><strong>Click Here</strong></button>
+</div>
+<br>
+<br>
 
 
+<h2>Examples of our lunch packs</h2>
+<br>
+<br>
+
+<div class="row">
+  <div class="column">
+<img class="pasta" src="pasta.png" alt="pasta" style="width:100%">
+<div class="container">
+<h4>The vegetarian pack</h4>
+<p>A selection of balanced, vegatarian meals including pastas and salads</p>
+<h5> From £2.00 per meal <button class="button button2"><strong>See more</strong></button> </h5>
+</div>
+</div>
+  <div class="column">
+<img class="sandwich" src="sandwich.png" alt="sandwich" style="width:100%">
+<div class="container">
+  <h4>The lunch pack</h4>
+<p>Sandwiches, wraps and bagels with a range of healthy fillings</p>
+<h5> From £1.50 per meal <button class="button button2"><strong>See more</strong></button> </h5>
+</div>
+  </div>
+  <div class="column">
+<img class="bentobox" src="bentobox.png" alt="bentobox" style="width:100%">
+<div class="container">
+  <h4>The combo pack</h4>
+<p>Hot and cold bentoboxes packed with tasty, nutritious meals and snacks</p>
+<h5> From £2.50 per meal <button class="button button2"><strong>See more</strong></button> </h5>
+
+</div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="column">
+<img class="protein" src="proteinbox.png" alt="protein box" style="width:100%">
+<div class="container">
+<h4>The protein pack</h4>
+<p>Filling meals packed full of protein and vegetables to fuel the day</p>
+<h5> From £2.50 per meal
+  <button class="button button2"><strong>See more</strong></button>
+</div>
+</div>
+  <div class="column">
+<img class="treat" src="treatbox.png" alt="treat box" style="width:100%">
+<div class="container">
+  <h4>The treat pack</h4>
+<p>Special occasion? The treat pack contains healthy but delicious treats</p>
+<h5> From £1.50 per meal <button class="button button2"><strong>See more</strong></button> </h5>
+</div>
+  </div>
+  <div class="column">
+<img class="snack" src="snackbox.png" alt="snack box" style="width:100%">
+<div class="container">
+  <h4>The snack pack</h4>
+<p>A range of nutritious snacks for on-the-go, instead of a main meal</p>
+<h5> From £1.50 per meal <button class="button button2"><strong>See more</strong></button> </h5>
+</div>
+  </div>
+</div>
+
+
+</body>
 </html>
