--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <title>Recipe App</title>
+  <title>Munch Box</title>
 
-  <!--favicon to change-->
+  <!--favicon-->
   <link rel="shortcut icon" type="image/png" href="./assets/food.png" style="width:16px">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,14 +13,13 @@
   <div id="main-nav">
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" href="/index.html">Home</a>
+        <a class="nav-link active" href="./index.html">Home</a>
       </li>
-      <!--logo to change-->
       <li class="logo">
-        <img class="nav-brand" src="./placeholderlogo.png" style="width:250px">
+        <img class="nav-brand" src="./logo.jpeg" style="width:150px">
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about.html">About</a>
+        <a class="nav-link" href="./about.html">About</a>
       </li>
     </ul>
   </div>
@@ -34,33 +33,32 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./assets/image1.jpg" class="d-block w-100" style="opacity: 0.7" alt="...">
+          <img src="./assets/lunchbox.jpg" class="d-block w-100" style="opacity: 0.8" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="headline-caption">First slide label</h5>
             <p class="text-caption">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            <!--Subscribe button-->
             <div>
-              <button class="button">Subscribe</button>
+              <button href="#signupform" class="button">Sign up now</button>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./assets/image2.jpg" class="d-block w-100" style="opacity: 0.7" alt="...">
+          <img src="./assets/lunchfood.jpg" class="d-block w-100" style="opacity: 0.8" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="headline-caption">Second slide label</h5>
             <p class="text-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <div>
-            <button class="button">Subscribe</button>
+            <button href="#signupform" class="button">Sign up now</button>
           </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./assets/image3.jpg" class="d-block w-100" style="opacity: 0.7" alt="...">
+          <img src="./assets/lunchpack.jpg" class="d-block w-100" style="opacity: 0.8" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="headline-caption">Third slide label</h5>
             <p class="text-caption">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
           <div>
-            <button class="button">Subscribe</button>
+            <button href="#signupform" class="button">Sign up now</button>
           </div>
           </div>
         </div>
@@ -106,6 +104,38 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!--Sign up form-->
+
+  <div id="form-section">
+    <div class="form-header">
+      <h4 style="text-transform: uppercase; font-size: 30px;">Order your first box</h4>
+      <p>Sign up below to receive 50% off your first box. Set the number of boxes and frequency of deliveries. Cancel anytime.</p>
+    </div>
+    <div class="signup-form">
+      <form>
+        <div class="form-group">
+          <input type="name" class="form-control" id="InputName1" placeholder="Name">
+        </div>
+        <div class="form-group">
+          <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Email address">
+        </div>
+    <!--not sure to include password input or not
+        <div class="form-group">
+          <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" id="InputPassword2" placeholder="Confirm password">
+        </div>
+    -->
+        <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="Check1">I have read and understood the <a href="#" style="color: black">terms & condition</a></label>
+        </div>
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+      </form>
     </div>
   </div>
 
