--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="carousel-item active">
           <img src="./assets/lunchbox.jpg" class="d-block w-100" style="opacity: 0.8" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="headline-caption">First slide label</h5>
-            <p class="text-caption">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            <h5 class="headline-caption">Healthy and tasty school lunches for your kids</h5>
+            <p class="text-caption">Munch Box is a subscription service providing ready-to-eat packed lunches for children aged 5 and above.</p>
             <div>
               <button href="#signupform" class="button">Sign up now</button>
             </div>
@@ -45,8 +45,8 @@
         <div class="carousel-item">
           <img src="./assets/lunchfood.jpg" class="d-block w-100" style="opacity: 0.8" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="headline-caption">Second slide label</h5>
-            <p class="text-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h5 class="headline-caption">Balanced meals with a variety of flavour and taste</h5>
+            <p class="text-caption">With Munch Box, even the most fussy eaters can get their daily nutritional requirements.</p>
           <div>
             <button href="#signupform" class="button">Sign up now</button>
           </div>
@@ -55,8 +55,8 @@
         <div class="carousel-item">
           <img src="./assets/lunchpack.jpg" class="d-block w-100" style="opacity: 0.8" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="headline-caption">Third slide label</h5>
-            <p class="text-caption">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <h5 class="headline-caption">Complete flexibility for the busy parents</h5>
+            <p class="text-caption">Munch Box offers early morning and late evening deliveries. Set the frequency of your subscription. Change them anytime.</p>
           <div>
             <button href="#signupform" class="button">Sign up now</button>
           </div>
@@ -76,13 +76,14 @@
   <!--Columns with cards-->
 
   <div class="container">
+    <h4 class="instructions">How Munch Box works</h4>
     <div class="row">
       <div class="col-sm">
         <div class="card">
           <div class="card-body">
-            <img src="./assets/fork.svg" class="card-icon">
-            <h4 class="card-headline">Healthy & nutritional</h4>
-            <p class="card-content">Meals are prepared according to daily nutritional requirements</p>
+            <img src="./assets/website.svg" class="card-icon">
+            <h4 class="card-headline">Step 1: Create a Munch Box account</h4>
+            <p class="card-content">Sign up with your details, choose the frequency of deliveries and select a delivery time that works for you</p>
           </div>
         </div>
       </div>
@@ -90,8 +91,8 @@
         <div class="card">
           <div class="card-body">
             <img src="./assets/diet.svg" class="card-icon">
-            <h4 class="card-headline">Balanced meal</h4>
-            <p class="card-content">Meals are prepared according to daily nutritional requirements</p>
+            <h4 class="card-headline">Step 2: Choose your Munch Box</h4>
+            <p class="card-content">Munch Box has a range of packs to suit your children's needs and over 50 meals to choose from</p>
           </div>
         </div>
       </div>
@@ -99,8 +100,8 @@
         <div class="card">
           <div class="card-body">
             <img src="./assets/shipped.svg" class="card-icon">
-            <h4 class="card-headline">Evening deliveries</h4>
-            <p class="card-content">Meals are prepared according to daily nutritional requirements</p>
+            <h4 class="card-headline">Step 3: Wait for your delivery</h4>
+            <p class="card-content">Munch Box offers early morning and late evening deliveries so you can get it when it is most convenient</p>
           </div>
         </div>
       </div>
@@ -111,8 +112,8 @@
 
   <div id="form-section">
     <div class="form-header">
-      <h4 style="text-transform: uppercase; font-size: 30px;">Order your first box</h4>
-      <p>Sign up below to receive 50% off your first box. Set the number of boxes and frequency of deliveries. Cancel anytime.</p>
+      <h4 style="text-transform: uppercase; font-size: 30px;">Order your first Munch Box</h4>
+      <p>Sign up below to receive 50% off your first box. Cancel anytime.</p>
     </div>
     <div class="signup-form">
       <form>
@@ -122,7 +123,7 @@
         <div class="form-group">
           <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Email address">
         </div>
-    <!--not sure to include password input or not
+    <!--password input - to include or not
         <div class="form-group">
           <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
         </div>
