--- a/Lizzieindex11.html
+++ b/Lizzieindex11.html
@@ -47,23 +47,23 @@
       <div class="w3-row-padding w3-center" style="margin-top:64px">
         <div class="w3-quarter">
 
-          <p class="w3-large">No Preservatives</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+          <p class="w3-large">✓ No Preservatives</p>
+          <p>Preservatives, such as sulfites, can trigger wheezing and other asthma symptoms </p>
         </div>
         <div class="w3-quarter">
 
-          <p class="w3-large">No saturated fats</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+          <p class="w3-large">✓ No saturated fats</p>
+          <p>Saturated fats increase your LDL (bad) cholesterol which can deposit in your arteries </p>
         </div>
         <div class="w3-quarter">
 
-          <p class="w3-large">No unwanted salts or sugars</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+          <p class="w3-large">✓ No unwanted salts or sugars</p>
+          <p>Salt puts a lot of pressure on children's kidneys and a lot of the sugar we eat is hidden in the food we buy – even in savoury food</p>
         </div>
         <div class="w3-quarter">
 
-          <p class="w3-large">Local and ethically sourced produce</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+          <p class="w3-large">✓ Local and ethically sourced produce</p>
+          <p>Supporting our local farmers and reducing our carbon footprint</p>
         </div>
       </div>
     </div>
