--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="carousel-item active">
           <img src="./assets/lunchbox.jpg" class="d-block w-100" style="opacity: 0.8" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="headline-caption">Healthy and tasty school lunches for your kids</h5>
+            <h5 class="headline-caption">Healthy and tasty school lunches for kids</h5>
             <p class="text-caption">Munch Box is a subscription service providing ready-to-eat packed lunches for children aged 5 and above.</p>
             <div>
               <button href="#signupform" class="button">Sign up now</button>
@@ -56,7 +56,7 @@
           <img src="./assets/lunchpack.jpg" class="d-block w-100" style="opacity: 0.8" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="headline-caption">Complete flexibility for the busy parents</h5>
-            <p class="text-caption">Munch Box offers early morning and late evening deliveries. Set the frequency of your subscription. Change them anytime.</p>
+            <p class="text-caption">Munch Box offers early morning and late evening deliveries and the ability to select the delivery frequency. You can change them anytime.</p>
           <div>
             <button href="#signupform" class="button">Sign up now</button>
           </div>
@@ -142,7 +142,6 @@
 
   <!-- Bootstrap core JavaScript
   ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
   <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
