--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head> <!-- Document Setup inc. links to stylesheets and bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="aboutstyles.css">
 
   <title> About page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,13 +14,13 @@
   <div id="main-nav"> <!-- Navigation menu -->
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" href="/index.html">Home</a>
+        <a class="nav-link active" href="./index.html">Home</a>
       </li>
       <li class="logo">
         <img class="nav-brand" src="MunchBox.png" style="width:100px">
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about.html">About</a>
+        <a class="nav-link" href="./about.html">About</a>
       </li>
     </ul>
   </div>
